# Aegis-Private-Browser

./: Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  run-aegis.bat  stop-aegis.bat
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  connect.rs  main.rs  render.rs
apps/manager-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/manager-ui/src-tauri/capabilities/: default.json
apps/manager-ui/src-tauri/src/: dto.rs  ipc.rs  lib.rs  main.rs
browser/chromium-patches/: README.md
browser/chromium-patches/patches/: 0001-hardware-concurrency-clamp.patch  0002-timezone-language-pinning.patch
browser/policies/: README.md
browser/policies/managed/: README.md  strict.json
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: browser.rs  config.rs  error.rs  events.rs  fingerprint.rs  gateway.rs  health.rs  ids.rs  lib.rs  network.rs  permissions.rs  preflight.rs  preview.rs  profile.rs  secure.rs  session.rs  traits.rs  update.rs  vm.rs
crates/aegis-daemon/: Cargo.toml
crates/aegis-daemon/src/: audit.rs  config.rs  handler.rs  host_probe.rs  lib.rs  main.rs  orchestrator.rs
crates/aegis-daemon/tests/: integration.rs
crates/aegis-ipc/: Cargo.toml
crates/aegis-ipc/src/: client.rs  frame.rs  lib.rs  protocol.rs  server.rs  transport.rs
crates/browser-launcher/: Cargo.toml
crates/browser-launcher/src/: chromium.rs  firefox.rs  host_runner.rs  lib.rs  runner.rs
crates/gateway-controller/: Cargo.toml
crates/gateway-controller/src/: lib.rs  mock.rs  render.rs  runner.rs
crates/network-audit/: Cargo.toml
crates/network-audit/src/: lib.rs  probe.rs
crates/profile-store/: Cargo.toml
crates/profile-store/src/: lib.rs  shred.rs  store.rs
crates/profile-store/tests/: repository.rs
crates/secure-storage/: Cargo.toml
crates/secure-storage/src/: lib.rs
crates/update-client/: Cargo.toml
crates/update-client/src/: lib.rs
crates/vm-controller/: Cargo.toml
crates/vm-controller/src/: lib.rs  runner.rs  xml.rs
docs/: INSTALL-linux.md  architecture.md  browser-api-table.md  data-flow.md  host-info-to-cut.md  limitations.md  networks-and-proxies.md  privacy-model.md  release-process.md  security-acceptance-criteria.md  threat-model.md
docs/adr/: 0001-whonix-style-vm-isolation.md  0002-fingerprint-normalization-not-spoofing.md  0003-chromium-mvp-then-firefox-backend.md  0004-privileged-daemon-and-local-socket.md  0005-fail-closed-networking.md
firewall/: README.md
firewall/nftables/: gateway.nft  ipv6-block.nft  killswitch.nft  nat-tor.nft
firewall/tests/: README.md  leak-scenarios.sh
images/: README.md
images/browser/: README.md  build.sh  mkosi.conf  mkosi.postinst
images/browser/files/etc/: fstab  machine-id.README
images/browser/files/etc/sysctl.d/: 99-aegis-browser.conf
images/browser/files/etc/systemd/network/: 10-gateway.network
images/browser/files/etc/systemd/system/: aegis-browser-firstboot.service  aegis-kiosk.service
images/browser/files/etc/systemd/system/aegis-kiosk.service.d/: 10-hardening.conf
images/browser/files/etc/systemd/system/qemu-guest-agent.service.d/: aegis-lockdown.conf
images/browser/files/usr/local/sbin/: aegis-browser-firstboot  aegis-launch-chromium
images/browser/files/usr/share/aegis/policies/: balanced.json
images/gateway/: README.md  build.sh  mkosi.conf  mkosi.postinst
images/gateway/files/etc/: fstab
images/gateway/files/etc/nftables/: aegis-gateway.nft  aegis-killswitch.nft
images/gateway/files/etc/sysctl.d/: 99-aegis-gateway.conf
images/gateway/files/etc/systemd/network/: 10-upstream.network  20-downstream.network
images/gateway/files/etc/systemd/system/: aegis-gateway-firewall.service  aegis-healthcheck.service  aegis-tor.service
images/gateway/files/etc/systemd/system/qemu-guest-agent.service.d/: aegis-lockdown.conf
images/gateway/files/etc/tor/: torrc
images/gateway/files/usr/local/sbin/: aegis-healthcheck
packaging/linux/: README.md  aegis-daemon.service  aegis-daemon.socket  build-deb.sh  config.example.toml
packaging/linux/sysusers.d/: aegis.conf
packaging/linux/tmpfiles.d/: aegis.conf
packaging/updater/: README.md  generate-keys.sh  sign-manifest.sh  verify-manifest.sh
tests/: README.md
tests/redteam/: Cargo.toml
tests/redteam/src/: lib.rs
tests/redteam/tests/: acceptance.rs  redteam_browser.rs  redteam_firewall.rs  redteam_network.rs  redteam_profiles.rs  redteam_updates.rs
tests/redteam/tests/harness/: mod.rs
tools/: screenshot.ps1
