# Aegis Private Browser — Cargo workspace
#
# All crates share dependency versions declared in [workspace.dependencies] and
# opt in with `dep.workspace = true`. The Tauri UI (apps/manager-ui/src-tauri) is
# a member but excluded from `default-members` so the security-critical host
# crates can be verified quickly with `cargo check` without pulling the webview
# toolchain. See docs/architecture.md.

[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/secure-storage",
    "crates/profile-store",
    "crates/vm-controller",
    "crates/gateway-controller",
    "crates/network-audit",
    "crates/browser-launcher",
    "crates/update-client",
    "crates/aegis-ipc",
    "crates/aegis-daemon",
    "apps/cli",
    "tests/redteam",
    # apps/manager-ui/src-tauri is added during the UI phase (heavy webview deps).
]
default-members = [
    "crates/aegis-core",
    "crates/secure-storage",
    "crates/profile-store",
    "crates/vm-controller",
    "crates/gateway-controller",
    "crates/network-audit",
    "crates/browser-launcher",
    "crates/update-client",
    "crates/aegis-ipc",
    "crates/aegis-daemon",
    "apps/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later"
authors = ["Aegis Project"]
repository = "https://example.invalid/aegis-browser"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Internal crates
aegis-core = { path = "crates/aegis-core" }
secure-storage = { path = "crates/secure-storage" }
profile-store = { path = "crates/profile-store" }
vm-controller = { path = "crates/vm-controller" }
gateway-controller = { path = "crates/gateway-controller" }
network-audit = { path = "crates/network-audit" }
browser-launcher = { path = "crates/browser-launcher" }
update-client = { path = "crates/update-client" }
aegis-ipc = { path = "crates/aegis-ipc" }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "sync", "time", "fs", "signal"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Identifiers / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"

# Cryptography
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
subtle = "2"
hex = "0.4"

# Utilities
tempfile = "3"
ureq = { version = "2", features = ["json"] }
async-trait = "0.1"
futures = "0.3"

# Dev / test
proptest = "1"
