[package]
name = "aegis-cli"
description = "Aegis command-line interface (profiles, sessions, diagnostics, updates)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-ipc.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
