[package]
name = "browser-launcher"
description = "BrowserBackend implementations (hardened Chromium MVP, Firefox planned) for Aegis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aegis-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
