[package]
name = "secure-storage"
description = "Argon2id KDF + XChaCha20-Poly1305 AEAD sealing for Aegis profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aegis-core.workspace = true
zeroize.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true

[dev-dependencies]
serde_json.workspace = true
