[package]
name = "vm-controller"
description = "libvirt/QEMU VM lifecycle controller for Aegis (shells out to virsh/qemu-img)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aegis-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
